# COMP4050BAMBrazil

./: .gitignore  AGENTS.md  Makefile  PR_NOTES.md  README.md  docker-compose.ia.yml  docker-compose.yml  package-lock.json
BAM_UI/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
BAM_UI/src/: App.tsx  BioscopeBookingUI.tsx  main.tsx
BAM_UI/src/LoginOut/: LoginPage.tsx  LogoutButton.tsx  PostLogin.tsx  RequireAuth.tsx  RouteTracer.tsx
BAM_UI/src/calendar/: calendarNav.tsx  state.ts  useCalendarNav.ts
BAM_UI/src/components/booking/: BookingCalendar.tsx  BookingForm.tsx  BookingList.tsx  BookingSchedule.tsx
BAM_UI/src/components/dashboard/: AnalyticsDashboard.tsx
BAM_UI/src/components/layout/: Header.tsx
BAM_UI/src/components/teacher/: ApprovalQueue.tsx  DayAtAGlance.tsx
BAM_UI/src/components/ui/: BookingCard.tsx  ImageGallery.tsx  MicroscopeCard.tsx  StatusIndicator.tsx  TimeSlotPicker.tsx  UserAvatar.tsx  badge.tsx  button.tsx
BAM_UI/src/components/ui/__tests__/: BookingCard.test.tsx  ImageGallery.test.tsx  MicroscopeCard.test.tsx  StatusIndicator.test.tsx  TimeSlotPicker.test.tsx
BAM_UI/src/components/ui/stories/: BookingCard.stories.tsx  ImageGallery.stories.tsx  StatusIndicator.stories.tsx  TimeSlotPicker.stories.tsx  UserAvatar.stories.tsx
BAM_UI/src/context/: AppContext.tsx  AuthContext.tsx  app-context.ts  auth-context.ts
BAM_UI/src/hooks/: useAuth.ts  useBookings.ts  useMicroscope.ts
BAM_UI/src/services/: apiClient.ts
BAM_UI/src/tools/: getCalendarConflicts.ts
BAM_UI/src/types/: api.ts  booking.ts  images.ts  index.ts  microscope.ts  user.ts
IA/: README.md
api-server/: .env.example  Cargo.toml  Dockerfile  README.md
api-server/migrations/: 001_initial_schema.sql
api-server/src/: config.rs  error.rs  lib.rs  main.rs
api-server/src/handlers/: auth.rs  bookings.rs  images.rs  microscope.rs  mod.rs  sessions.rs
api-server/src/middleware/: auth.rs  mod.rs
api-server/src/models/: mod.rs
api-server/src/services/: database.rs  file_storage.rs  ia_client.rs  mod.rs
api-server/tests/: integration_tests.rs
